tests/fixtures/invalid/store_after_dealloc.lullaby
fn main -> void
    let ptr ptr_i64 = alloc(1)
    if true
        dealloc(ptr)
    store(ptr, 2)
